fix: navbar bleeding over siblings

--- a/themes/bella/styles/section.navbar.scss
+++ b/themes/bella/styles/section.navbar.scss
@@ -9,8 +9,10 @@
 
   [ui-layout="navbar"] {
     display: grid;
-    grid-template-columns: 1fr auto 1fr;
+    grid-template-areas: "logo menu actions";
+    grid-template-columns: 1fr 4fr 1fr;
     align-items: center;
+    gap: var(--spacing-16);
     padding: attr(data-top-spacing px) 8% attr(data-bottom-spacing px);
     transition: box-shadow var(--transition-standard-fast-spatial);
     background-color: inherit;
@@ -25,8 +27,6 @@
     }
 
     .logo {
-      flex-shrink: 0;
-
       .name {
         font: var(--font-title-md);
         text-transform: uppercase;
